--- a/package.json
+++ b/package.json
@@ -1,27 +1,71 @@
 {
-  "name": "raster-histogram",
-  "version": "0.0.1",
-  "description": "Creates a histogram of the color profile of a set of leaflet tiles",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "name": "project-seed",
+  "version": "0.1.0",
+  "description": "A basic project starting template.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/drewbo/raster-histogram.git"
+    "url": "https://github.com/developmentseed/project-seed.git"
   },
-  "author": "drewbo",
-  "license": "ISC",
+  "author": {
+    "name": "Development Seed",
+    "url": "https://developmentseed.org"
+  },
+  "license": "BSD",
   "bugs": {
-    "url": "https://github.com/drewbo/raster-histogram/issues"
+    "url": "https://github.com/developmentseed/project-seed/issues"
   },
-  "homepage": "https://github.com/drewbo/raster-histogram",
-  "dependencies": {
-    "browserify": "^9.0.8",
-    "tile-cover": "^2.4.1",
-    "turf-bbox-polygon": "^1.0.1"
+  "homepage": "https://github.com/developmentseed/project-seed",
+  "scripts": {
+    "postinstall": "[ -f app/assets/scripts/config/local.js ] || echo 'module.exports = {};' > app/assets/scripts/config/local.js",
+    "serve": "gulp serve",
+    "build": "gulp",
+    "lint": "semistandard app/assets/scripts/**/*.js",
+    "test": "echo NO TESTS YET"
+  },
+  "browserify": {
+    "transform": [
+      "babelify",
+      "require-globify",
+      "envify"
+    ]
   },
   "devDependencies": {
-    "beefy": "^2.1.5"
-  }
+    "autoprefixer-core": "^5.2.0",
+    "babel": "^5.8.23",
+    "babelify": "^6.3.0",
+    "browser-sync": "^2.7.6",
+    "browserify": "^10.2.3",
+    "del": "^1.2.0",
+    "envify": "^3.4.0",
+    "gulp": "^3.9.0",
+    "gulp-cache": "^0.2.9",
+    "gulp-csso": "^1.0.0",
+    "gulp-exit": "0.0.2",
+    "gulp-if": "^1.2.5",
+    "gulp-imagemin": "^2.2.1",
+    "gulp-jshint": "^1.11.0",
+    "gulp-load-plugins": "^0.10.0",
+    "gulp-minify-html": "^1.0.3",
+    "gulp-plumber": "^1.0.1",
+    "gulp-postcss": "^5.1.8",
+    "gulp-rename": "^1.2.2",
+    "gulp-rev": "^4.0.0",
+    "gulp-rev-replace": "^0.4.1",
+    "gulp-sass": "^2.0.1",
+    "gulp-size": "^1.2.1",
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-uglify": "^1.2.0",
+    "gulp-useref": "^1.2.0",
+    "gulp-util": "^3.0.5",
+    "jshint-stylish": "^2.0.0",
+    "node-bourbon": "^4.2.3",
+    "node-notifier": "^4.2.1",
+    "opn": "^1.0.2",
+    "require-globify": "^1.2.1",
+    "semistandard": "^5.0.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.2.1"
+  },
+  "dependencies": {}
 }
